# fuzzuf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  README_ja.md  SECURITY.md  TODO.md  TUTORIAL.md  TUTORIAL_ja.md
algorithms/: CMakeLists.txt
algorithms/afl/: CMakeLists.txt  afl_dict_data.cpp  afl_fuzzer.cpp  afl_havoc_case_distrib.cpp  afl_optimizer.cpp  afl_setting.cpp  afl_testcase.cpp  afl_util.cpp
algorithms/afl_common/: CMakeLists.txt  afl_dict_data.cpp  afl_havoc_case_distrib.cpp  afl_havoc_optimizer.cpp  afl_setting.cpp  afl_testcase.cpp  afl_util.cpp
algorithms/afl_kscheduler/: CMakeLists.txt  fuzzer.cpp
algorithms/afl_symcc/: CMakeLists.txt  fuzzer.cpp
algorithms/aflfast/: CMakeLists.txt  aflfast_fuzzer.cpp  aflfast_other_hierarflow_routines.cpp  aflfast_setting.cpp  aflfast_state.cpp  aflfast_testcase.cpp
algorithms/aflplusplus/: CMakeLists.txt  aflplusplus_fuzzer.cpp  aflplusplus_havoc.cpp  aflplusplus_mutation_hierarflow_routines.cpp  aflplusplus_other_hierarflow_routines.cpp  aflplusplus_setting.cpp  aflplusplus_state.cpp  aflplusplus_testcase.cpp
algorithms/die/: CMakeLists.txt  die_fuzzer.cpp  die_hierarflow_routines.cpp  die_state.cpp
algorithms/eclipser/: CMakeLists.txt
algorithms/eclipser/cli_compat/: fuzzer.cpp  options.cpp
algorithms/eclipser/core/: branch_info.cpp  byte_val.cpp  bytes_utils.cpp  executor.cpp  executor_.cpp  failwith.cpp  libexec.c  options.cpp  seed.cpp  typedef.cpp  utils.cpp
algorithms/eclipser/fuzz/: fuzz.cpp  scheduler.cpp  seed_queue.cpp  sync.cpp  test_case.cpp
algorithms/eclipser/gray_concolic/: branch_trace.cpp  branch_tree.cpp  gray_concolic.cpp  linear_equation.cpp  linear_inequality.cpp  linearity.cpp  monotonicity.cpp  path_constraint.cpp  solve.cpp
algorithms/eclipser/instrumentor/: CMakeLists.txt
algorithms/eclipser/instrumentor/branch-x86/: CMakeLists.txt
algorithms/eclipser/instrumentor/branch-x86_64/: CMakeLists.txt  patch.sh
algorithms/eclipser/instrumentor/coverage-x86/: CMakeLists.txt
algorithms/eclipser/instrumentor/coverage-x86_64/: CMakeLists.txt  patch.sh
algorithms/eclipser/instrumentor/patches-branch/: eclipser.c  makefile-target.diff  optimize.diff
algorithms/eclipser/instrumentor/patches-coverage/: afl-qemu-cpu-inl.h  eclipser.c  target-translate.diff
algorithms/ijon/: CMakeLists.txt  ijon_fuzzer.cpp  ijon_havoc.cpp  ijon_hierarflow_routines.cpp  ijon_state.cpp  ijon_testcase.cpp
algorithms/libfuzzer/: CMakeLists.txt  config.cpp  dictionary.cpp  fuzzer.cpp  input_info.cpp  options.cpp  select_seed.cpp  state.cpp  test_utils.cpp  trace.cpp  utils.cpp
algorithms/libfuzzer_common/: CMakeLists.txt  config.cpp  dictionary.cpp  fuzzer.cpp  input_info.cpp  options.cpp  state.cpp  test_utils.cpp  trace.cpp  utils.cpp
algorithms/mopt/: CMakeLists.txt  mopt_fuzzer.cpp  mopt_havoc.cpp  mopt_hierarflow_routines.cpp  mopt_optimizer.cpp  mopt_setting.cpp  mopt_state.cpp  mopt_testcase.cpp
algorithms/nautilus/: CMakeLists.txt
algorithms/nautilus/fuzzer/: fuzzer.cpp  mutation_hierarflow_routines.cpp  nautilus_fuzzer.cpp  other_hierarflow_routines.cpp  queue.cpp  state.cpp  update_hierarflow_routines.cpp
algorithms/nautilus/grammartec/: chunkstore.cpp  context.cpp  mutator.cpp  recursion_info.cpp  rule.cpp  tree.cpp
algorithms/nezha/: CMakeLists.txt  fuzzer.cpp
algorithms/rezzuf/: CMakeLists.txt  rezzuf_fuzzer.cpp  rezzuf_hierarflow_routines.cpp  rezzuf_setting.cpp  rezzuf_state.cpp  rezzuf_testcase.cpp
algorithms/rezzuf_kscheduler/: CMakeLists.txt  abandon_entry.cpp  apply_rand_muts.cpp  fuzzer.cpp  havoc.cpp  load_seed_if_needed.cpp  select_seed.cpp  splicing.cpp  state.cpp
algorithms/vuzzer/: CMakeLists.txt  vuzzer.cpp  vuzzer_mutation_hierarflow_routines.cpp  vuzzer_mutator.cpp  vuzzer_other_hierarflow_routines.cpp  vuzzer_setting.cpp  vuzzer_state.cpp  vuzzer_testcase.cpp  vuzzer_update_hierarflow_routines.cpp  vuzzer_util.cpp
check/: config.h.in  (+14 more)
python/: CMakeLists.txt  export_fuzzuf.cpp  pyfeedback.cpp  pyseed.cpp  python_fuzzer.cpp  python_hierarflow_routines.cpp  python_setting.cpp  python_state.cpp  python_testcase.cpp
test/cli/: CMakeLists.txt  parser.cpp
test/common/: CMakeLists.txt  byte.cpp  create_file.cpp  create_file.hpp  move_to_program_location.cpp  move_to_program_location.hpp  random_data.cpp  random_data.hpp
test/exec_input/: CMakeLists.txt  exec_input_set.cpp
test/executor/: CMakeLists.txt  abort.cpp  fail.cpp  generate_outputs.cpp  ijon.cpp  illegal_instruction.cpp  linux_fork_server_run.cpp  native_linux_run.cpp  never_exit.cpp  ok.cpp  pintool_run.cpp  print_env.cpp  segmentation_fault.cpp  too_much_output.cpp
test/executor/coresight_executor/: CMakeLists.txt  run.cpp
test/executor/fork_server_mode/: CMakeLists.txt  environment_variables.cpp  output_dir.cpp  run.cpp
test/executor/non_fork_server_mode/: CMakeLists.txt  environment_variables.cpp  output_dir.cpp  run.cpp
test/executor/proxy_executor/: CMakeLists.txt  run.cpp
test/executor/pt_executor/: CMakeLists.txt  run.cpp
test/executor/qemu_executor/: CMakeLists.txt  run.cpp
test/fuzzer/: CMakeLists.txt  create.cpp  loop.cpp  multiple_instances.cpp  timeout.cpp
test/hierarflow/: CMakeLists.txt  check_operator_behavior.cpp  handle_corner_cases.cpp  utility.cpp
test/instrument/: CMakeLists.txt  README.md  cov_afl.cpp  cov_bb.cpp  zeroone.cpp
test/mutator/: CMakeLists.txt  havoc.cpp  more_havoc.cpp  mutator.cpp
test/profile/: CMakeLists.txt  add_seed.cpp
test/util/: CMakeLists.txt  border_edges  bswap.cpp  call_with_nth.cpp  child_node  count_bits.cpp  count_bytes.cpp  count_non255_bytes.cpp  erase_nth.cpp  exec_command.cpp  gen_dyn_weight.cpp  get_nth.cpp  global_counter.cpp  hash.cpp  insert_nth.cpp  katz_cent  load_border_edges.cpp  load_child_node.cpp  load_katz_centrality.cpp  locate_diffs.cpp  minimize_bits.cpp  murmurhash.cpp  not_random.cpp  random.cpp  range.cpp  sort_types.cpp  status.cpp  to_string.cpp  which.cpp  xxhash.cpp
tools/bbcounts2/: CMakeLists.txt  bbcounts2.cpp
tools/dict2mp/: CMakeLists.txt  dict2mp.cpp
(+815 files in other folders)
